<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_card"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/login_label"
                android:textAlignment="center"
                android:textColor="@android:color/tab_indicator_text"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Username"
                android:drawableStart="@drawable/ic_person_outline_grey_24dp"
                android:drawablePadding="15dp"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingHorizontal="15dp"
                android:textColor="@android:color/tab_indicator_text" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Password"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp" />

            <Button
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:background="@android:color/holo_orange_light"
                android:onClick="checkAutentication"
                android:text="@string/login_button"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:onClick="autenticationOspite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:textColor="#39974F"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/ospite"
                android:textAlignment="center" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_card"
        android:paddingTop="50dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>