<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.prenotazioni.DetailsActivity"
    android:padding="15dp"
    android:background="#25383C"
    android:fillViewport="true"
    tools:showIn="@layout/activity_details">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="60dp">

                <ImageView
                    android:id="@+id/image_school"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/school"
                    android:contentDescription="@string/decorazione_card"
                    android:scaleType="center" />

                <GridLayout
                    android:id="@+id/grid_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="25dp"
                    android:background="@android:color/white"
                    android:paddingHorizontal="10dp">

                    <TextView
                        android:id="@+id/docDettails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_gravity="end"
                        android:drawableStart="@drawable/ic_gdocenti"
                        android:drawablePadding="10dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:paddingVertical="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/docente"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/corDettails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_gravity="end"
                        android:drawableStart="@drawable/ic_gcorsi"
                        android:drawablePadding="20dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:paddingVertical="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/corso"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/docDettailsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:fontFamily="sans-serif-condensed"
                        android:paddingVertical="10dp"
                        android:paddingStart="10dp"
                        android:text="docente"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/corDettailsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:paddingVertical="10dp"
                        android:paddingStart="10dp"
                        android:text="corso"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/giorDettailsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:layout_gravity="end"
                        android:drawableStart="@drawable/ic_day_color"
                        android:drawablePadding="10dp"
                        android:paddingVertical="10dp"
                        android:paddingEnd="10dp"
                        android:text="giorno"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/oraDettailsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/clock"
                        android:drawablePadding="10dp"
                        android:paddingVertical="10dp"
                        android:paddingStart="10dp"
                        android:text="ora"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                </GridLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/help_pren_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/frame_layout"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/desc_prenotazione"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/help_pren_1"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/help_pren"
                android:textSize="15sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>
